# Rocket-todo

./: .env.test  .gitattributes  .gitignore  Cargo.toml  README.md  REFACTORING_ANALYSIS_AND_PLAN.md  REFACTORING_CHECKLIST.md  Rocket.toml  dev.py
.sqlx/: query-1b1061fb810269db796be73cb6c7280efe64b556d3600481d024263e911f7469.json  query-37c1fa08b10909379b0a5342af0ec17349fefbd089fb9bd230d014ceaab135f1.json  query-5925af872b32828850797bfbc0dae9fdd3fc088eaa45c9d943b70fedbcf17084.json  query-bb0211150df138253ebbfecf8fd68eb5db59999c4a17053d58096abd8a875717.json  query-fab4682c47f358ee006353fa956e89c5b6ff49d78260b7c0fb065c78bfa5218f.json
chat_folder/: 2025-11-18-caveat-the-messages-below-were-generated-by-the-u.txt  2025-11-18-commit.txt  2025-11-18-git多平台开发文件修改解决指南.txt  2025-11-19-caveat-the-messages-below-were-generated-by-the-u.txt  conversation-2025-11-18-154347.txt  conversation-2025-11-18-183523-Rocket-应用文档重构.txt  conversation-2025-11-18-191431.txt
doc/: 1_create_project.md  2. 项目优化建议  3. add dev script.md  apidoc.md  windows使用sqlite.md
doc/01-getting-started/: 1_create_project.md  windows使用sqlite.md
doc/02-development/: 3. add dev script.md  api-reference.md
doc/03-architecture/: ARCHITECTURE_ANALYSIS.md  optimization-guide.md
doc/参考文档/: 参考文档.md
docs/: API.md  CONFIGURATION.md  DEVELOPMENT.md  FAQ.md  README.md  SERVICE_LAYER.md  SETUP.md
migrations/: 001_create_todos_table.sql  002_create_users_table.sql  003_add_due_date_to_todos.sql  004_create_tags_table.sql  005_create_subtasks_table.sql
src/: database.rs  main.rs  telemetry.rs
todo/: do.md
(+30 files in other folders)
