[package]
name = "my-rocket-app"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
lazy_static = "1.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono", "uuid"] }
utoipa = { version = "4", features = ["chrono", "uuid", "yaml"] }
utoipa-swagger-ui = { version = "7", features = ["rocket"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-log = "0.2"
tracing-appender = "0.2"
once_cell = "1.19"


reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"  # 优化为最小体积（推荐）
# 或者 "s" 也是体积优化，与 z 类似
lto = true       # 链接时优化，进一步减小体积与提升性能
codegen-units = 1 # 减少并行编译单元，提高优化效果
strip = true     # 自动移除符号
panic = "abort"  # 不生成 backtrace，只直接终止程序
